Add form to create new recipe.
In doing this I updated the page that displays the recipe so that it no longer
assumes that every recipe has one and only one category, but injects the 'none'
category.

I've also failed to include several other aspects of a recipe in the initial
creation - tags, image, etc. I expect to add these to a recipe edit page later.

--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -90,7 +90,7 @@
         <button class="ui blue button" type="button" data-tooltip="Select recipe for {{ day|date('EEEE d MMMM') }}"><i class="calendar alternate outline icon" style="margin-right: 0; margin-left: 0;"></i></button>
       </div>
       {% endif %}
-      <a class="ui button" data-tooltip="Add a new recipe" href="{{ url_for('new_recipe') }}">
+      <a class="ui button" data-tooltip="Add a new recipe" href="{{ url_for('recipe_new') }}">
         <i class="plus icon" style="margin-right: 0; margin-left: 0;"></i>
       </a>
     </div>
