--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -11,7 +11,7 @@
         <img src="/static/food/example-{{ recipe.id }}.jpg">
       </a>
       <div class="content">
-        <a class="ui teal right ribbon label" href="{{ url_for('recipes', category=recipe.category.name|slugify) }}">{{ recipe.category.name }}</a>
+        <a class="ui teal right ribbon label" href="{{ url_for('recipes', category=recipe.category.name or 'none'|slugify) }}">{{ recipe.category.name }}</a>
         <a class="header" href="{{ recipe_url(recipe) }}" style="margin-top: -1rem; font-size: 2rem; padding-right: 3rem;">{{ recipe.name }}</a>
         <a href="/edit" style="position: absolute; right: 0px; bottom: 0px; color: black;"><i class="pen icon"></i></a>
       </div>
