Fix more pages with empty categories

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -5,7 +5,7 @@
     <img src="/static/food/example-{{ recipe.id }}.jpg">
   </a>
   <div class="content">
-    <a class="ui teal right ribbon label" href="{{ url_for('recipes', category=recipe.category.name|slugify) }}" style="position: relative; top: -0.5rem;">{{ recipe.category.name }}</a>
+    <a class="ui teal right ribbon label" href="{{ url_for('recipes', category=recipe.category.name or 'none'|slugify) }}" style="position: relative; top: -0.5rem;">{{ recipe.category.name }}</a>
     <a class="header" href="{{ url }}" style="margin-top: -2rem; margin-bottom: -0.5rem; padding-right: 3rem;">{{ recipe.name }}</a>
   </div>
   <div class="extra content meta">
